--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-embedded": "^1.89.2",
     "vue": "^3.5.17",
     "vuepress": "2.0.0-rc.24",
+    "vuepress-plugin-search-pro": "2.0.0-rc.59",
     "vuepress-theme-hope": "2.0.0-rc.94"
   },
   "pnpm": {
