--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,16 +31,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
+          run_install: false
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: pnpm
-
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 9
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Verify workspace
         run: |
